xAI: Add live search to Grok3 series models and rename models by removing beta suffix (#968)
* refactor(model/xai): rename grok3 series models by removing beta suffix

* feat(model/xai): add live search to Grok3 series models

* chore(model/xai): update plugin version to 0.0.8 in manifest.yaml

--- a/models/x/models/llm/grok-3-fast.yaml
+++ b/models/x/models/llm/grok-3-fast.yaml
@@ -1,6 +1,6 @@
-model: grok-3-mini-fast-beta
+model: grok-3-fast
 label:
-  en_US: grok-3-mini-fast-beta
+  en_US: grok-3-fast
 model_type: llm
 features:
   - agent-thought
@@ -17,18 +17,6 @@ parameter_rules:
     use_template: top_p
   - name: frequency_penalty
     use_template: frequency_penalty
-  - name: reasoning_effort
-    label:
-      zh_Hans: 推理工作
-      en_US: reasoning_effort
-    type: string
-    help:
-      zh_Hans: 限制推理模型的推理工作
-      en_US: constrains effort on reasoning for reasoning models
-    required: false
-    options:
-      - low
-      - high
   - name: response_format
     label:
       zh_Hans: 回复格式
@@ -43,8 +31,18 @@ parameter_rules:
       - json_schema
   - name: json_schema
     use_template: json_schema
+  - name: search_parameters
+    label: 
+      zh_Hans: 联网搜索参数
+      en_US: Live Search Parameters
+    type: text
+    default: "{\n  \"mode\": \"auto\"\n}"
+    help:
+      zh_Hans: 传递给联网搜索的参数，具体参数见 https://docs.x.ai/docs/api-reference#chat-completions
+      en_US: Parameters to pass to the live search, see https://docs.x.ai/docs/api-reference#chat-completions
+    required: false
 pricing:
-  input: "0.60"
-  output: "4.00"
+  input: "5.00"
+  output: "25.00"
   unit: "0.000001"
   currency: USD
