--- a/models/x/models/llm/grok-3-mini.yaml
+++ b/models/x/models/llm/grok-3-mini.yaml
@@ -13,10 +13,15 @@ model_properties:
 parameter_rules:
   - name: temperature
     use_template: temperature
+    default: 1.0
+    min: 0.0
+    max: 2.0
   - name: top_p
     use_template: top_p
   - name: frequency_penalty
     use_template: frequency_penalty
+    min: -2.0
+    max: 2.0
   - name: reasoning_effort
     label:
       zh_Hans: 推理工作
