--- a/models/x/models/llm/grok-3.yaml
+++ b/models/x/models/llm/grok-3.yaml
@@ -13,10 +13,15 @@ model_properties:
 parameter_rules:
   - name: temperature
     use_template: temperature
+    default: 1.0
+    min: 0.0
+    max: 2.0
   - name: top_p
     use_template: top_p
   - name: frequency_penalty
     use_template: frequency_penalty
+    min: -2.0
+    max: 2.0
   - name: response_format
     label:
       zh_Hans: 回复格式
@@ -32,7 +37,7 @@ parameter_rules:
   - name: json_schema
     use_template: json_schema
   - name: search_parameters
-    label: 
+    label:
       zh_Hans: 联网搜索参数
       en_US: Live Search Parameters
     type: text
