--- a/models/openai/models/llm/_position.yaml
+++ b/models/openai/models/llm/_position.yaml
@@ -1,20 +1,29 @@
 - o1
-- o1-2024-12-17
 - o1-mini
 - o1-mini-2024-09-12
+- o1-preview
+- o1-preview-2024-09-12
+- o3
+- o3-2025-04-16
 - o3-mini
 - o3-mini-2025-01-31
-- gpt-4
-- gpt-4o
-- gpt-4o-2024-05-13
-- gpt-4o-2024-08-06
-- gpt-4o-2024-11-20
+- o4-mini
+- o4-mini-2025-04-16
 - gpt-4.1
 - gpt-4.1-2025-04-14
 - gpt-4.1-mini
 - gpt-4.1-mini-2025-04-14
 - gpt-4.1-nano
 - gpt-4.1-nano-2025-04-14
+- chatgpt-4o-latest
+- gpt-4o
+- gpt-4o-2024-05-13
+- gpt-4o-2024-08-06
+- gpt-4o-2024-11-20
+- gpt-4o-mini
+- gpt-4o-mini-2024-07-18
+- gpt-4o-audio-preview
+- gpt-4
 - gpt-4-turbo
 - gpt-4-turbo-2024-04-09
 - gpt-4-turbo-preview
