--- a/models/vertex_ai/models/llm/gemini-2.0-flash-001.yaml
+++ b/models/vertex_ai/models/llm/gemini-2.0-flash-001.yaml
@@ -34,6 +34,15 @@ parameter_rules:
     max: 8192
   - name: json_schema
     use_template: json_schema
+  - name: grounding
+    label:
+      en_US: Grounding
+    type: float
+    help:
+      en_US: ensures responses are based on reliable sources.
+    required: false
+    min: 0
+    max: 1
 pricing:
   input: '0.00'
   output: '0.00'
