--- a/models/vertex_ai/models/llm/gemini-2.5-pro-preview-05-06.yaml
+++ b/models/vertex_ai/models/llm/gemini-2.5-pro-preview-05-06.yaml
@@ -37,6 +37,15 @@ parameter_rules:
     max: 65535
   - name: json_schema
     use_template: json_schema
+  - name: grounding
+    label:
+      en_US: Grounding
+    type: float
+    help:
+      en_US: ensures responses are based on reliable sources.
+    required: false
+    min: 0
+    max: 1
 pricing:
   input: '1.25'
   output: '10.00'
