--- a/models/vertex_ai/requirements.txt
+++ b/models/vertex_ai/requirements.txt
@@ -1,4 +1,5 @@
 dify_plugin>=0.2.0,<0.3.0
 anthropic==0.42.0
-vertexai==1.71.1
+google-cloud-aiplatform==1.74.0
+google-genai==1.11.0
 Pillow==11.0.0
