feat(mistralai): Major model update (#1090)
* feat(mistralai): add Mistral Embed model and update manifest files

* feat(mistralai): Major model update - remove deprecated models and add latest releases

Models Removed (Legacy/Deprecated):
- Remove open-mistral-7b (deprecated 2024/11/30, retirement 2025/03/30)
- Remove open-mixtral-8x7b (deprecated 2024/11/30, retirement 2025/03/30)
- Remove open-mixtral-8x22b (deprecated 2024/11/30, retirement 2025/03/30)

New Premier Models Added:
- Add Magistral Medium 2506 with reasoning mode support (40k tokens)
- Add Mistral Medium 2505 frontier multimodal model (128k tokens)
- Add Codestral 2501 latest coding model (256k tokens)
- Add Mistral Saba 2502 for Middle East/South Asia languages (32k tokens)
- Add Pixtral Large 2411 frontier multimodal model (128k tokens)
- Add Ministral 3B/8B 2410 edge models (128k tokens)
- Add Codestral Embed for code representation (8k tokens)

New Free Models Added:
- Add Magistral Small 2506 with reasoning mode support (40k tokens)
- Add Devstral Small 2505 for software engineering agents (128k tokens)
- Add Mistral Small 2503 with image understanding (128k tokens)
- Add Open Mistral Nemo 2407 as versioned variant (128k tokens)
- Add Mathstral for mathematical reasoning (32k tokens)

New Features:
- Add Mistral Moderation 2411 API support with dedicated endpoints
- Implement reasoning mode parameters for Magistral models
- Add both versioned and latest variants for all new models
- Add text embedding support for Codestral Embed

Configuration Updates:
- Update model parameters and token limits per official API documentation
- Update LLM position ordering for new model hierarchy
- Add text embedding position for Codestral Embed
- Add moderation model positioning and implementation
- Update provider manifest with new model categories and endpoints
- Update README documentation with current model lineup
- Update existing model configurations (codestral-latest, mistral-large-latest, etc.)

Migrati

--- a/models/mistralai/models/llm/magistral-small-2506.yaml
+++ b/models/mistralai/models/llm/magistral-small-2506.yaml
@@ -1,13 +1,13 @@
-model: open-codestral-mamba
+model: magistral-small-2506
 label:
-  zh_Hans: Codestral Mamba (Latest)
-  en_US: Codestral Mamba (Latest)
+  zh_Hans: Magistral Small (25.06)
+  en_US: Magistral Small (25.06)
 model_type: llm
 features:
   - agent-thought
 model_properties:
   mode: chat
-  context_size: 256000
+  context_size: 128000
 parameter_rules:
   - name: temperature
     use_template: temperature
@@ -16,14 +16,17 @@ parameter_rules:
     max: 1
   - name: top_p
     use_template: top_p
-    default: 1
+    default: 0.95
     min: 0
     max: 1
   - name: max_tokens
     use_template: max_tokens
-    default: 1024
+    default: 40960
     min: 1
-    max: 256000
+    max: 128000
+    help:
+      en_US: Maximum tokens to generate. 40960 recommended for complex tasks. Context window is 128k but performance may degrade past 40k.
+      zh_Hans: 生成的最大令牌数。复杂任务建议使用40960。上下文窗口为128k，但超过40k后性能可能下降。
   - name: safe_prompt
     default: false
     type: boolean
@@ -66,8 +69,18 @@ parameter_rules:
     default: 0
     min: -2
     max: 2
+  - name: reasoning_mode
+    type: boolean
+    default: true
+    help:
+      en_US: Enable reasoning mode with system prompt for step-by-step problem solving. When disabled, uses standard chat behavior without system prompt.
+      zh_Hans: 启用带系统提示的推理模式进行逐步问题解决。禁用时，使用标准聊天行为而无系统提示。
+    label:
+      en_US: Reasoning Mode
+      zh_Hans: 推理模式
+
 pricing:
-  input: '0.008'
-  output: '0.024'
-  unit: '0.001'
+  input: '0.5'
+  output: '1.5'
+  unit: '0.000001'
   currency: USD
