--- a/models/mistralai/models/llm/mathstral.yaml
+++ b/models/mistralai/models/llm/mathstral.yaml
@@ -1,13 +1,13 @@
-model: open-codestral-mamba
+model: mathstral
 label:
-  zh_Hans: Codestral Mamba (Latest)
-  en_US: Codestral Mamba (Latest)
+  zh_Hans: Mathstral
+  en_US: Mathstral
 model_type: llm
 features:
   - agent-thought
 model_properties:
   mode: chat
-  context_size: 256000
+  context_size: 32000
 parameter_rules:
   - name: temperature
     use_template: temperature
@@ -23,7 +23,7 @@ parameter_rules:
     use_template: max_tokens
     default: 1024
     min: 1
-    max: 256000
+    max: 32000
   - name: safe_prompt
     default: false
     type: boolean
@@ -66,8 +66,4 @@ parameter_rules:
     default: 0
     min: -2
     max: 2
-pricing:
-  input: '0.008'
-  output: '0.024'
-  unit: '0.001'
-  currency: USD
+# Note: Mathstral is not available via API according to documentation
