Added Voyage 3.5 models (#1056)
* Added Voyage 3.5 models

* updated plugin SDK version

--- a/models/voyage/models/text_embedding/_position.yaml
+++ b/models/voyage/models/text_embedding/_position.yaml
@@ -1,5 +1,8 @@
+- voyage-3.5
+- voyage-3.5-lite
 - voyage-3
 - voyage-3-lite
+- voyage-3-large
 - voyage-finance-2
 - voyage-multilingual-2
 - voyage-law-2
