--- a/tools/comfyui/tools/txt2img.yaml
+++ b/tools/comfyui/tools/txt2img.yaml
@@ -24,7 +24,8 @@ identity:
     ja_JP: テキストto画像
   name: txt2img
 parameters:
-  - form: llm
+  - name: prompt
+    form: llm
     human_description:
       en_US:
         Image prompt, you can check the official documentation of Stable Diffusion
@@ -38,13 +39,14 @@ parameters:
       en_US: Prompt
       pt_BR: Prompt
       zh_Hans: 提示词
+      ja_JP: プロンプト
     llm_description:
       Image prompt of Stable Diffusion, you should describe the image
       you want to generate as a list of words as possible as detailed, the prompt must
       be written in English.
-    name: prompt
     required: true
     type: string
+
   - name: negative_prompt
     default: bad art, ugly, deformed, watermark, duplicated, discontinuous lines
     form: llm
@@ -88,7 +90,8 @@ parameters:
     name: model_type
     required: true
     type: string
-  - default: 20
+
+  - name: steps
     form: llm
     human_description:
       en_US: Steps
@@ -100,10 +103,10 @@ parameters:
       pt_BR: Steps
       zh_Hans: Steps
       ja_JP: ステップ数
-    name: steps
-    required: false
+    required: true
     type: number
-  - default: 1024
+
+  - name: width
     form: llm
     human_description:
       en_US: Width
@@ -115,10 +118,10 @@ parameters:
       pt_BR: Width
       zh_Hans: Width
       ja_JP: 画像幅
-    name: width
-    required: false
+    required: true
     type: number
-  - default: 1024
+
+  - name: height
     form: llm
     human_description:
       en_US: Height
@@ -130,17 +133,16 @@ parameters:
       pt_BR: Height
       zh_Hans: Height
       ja_JP: 画像高さ
-    name: height
-    required: false
+    required: true
     type: number
 
   - default: 7.0
     form: llm
     human_description:
-      en_US: CFG Scale
-      pt_BR: CFG Scale
-      zh_Hans: 提示词相关性(CFG Scale)
-      ja_JP: CFG スケール
+      en_US: CFG Scale (7.0 by default)
+      pt_BR: CFG Scale (7.0 by default)
+      zh_Hans: 提示词相关性(CFG Scale) (7.0 by default)
+      ja_JP: CFG スケール (デフォルト値 7.0)
     label:
       en_US: CFG Scale
       pt_BR: CFG Scale
@@ -149,8 +151,9 @@ parameters:
     name: cfg
     required: false
     type: number
+
   - form: llm
-    default: eular
+    default: euler
     human_description:
       en_US: Sampling method
       pt_BR: Sampling method
@@ -205,3 +208,75 @@ parameters:
       ja_JP: LORA 強度
     required: false
     type: string
+
+  - name: hiresfix_enabled
+    form: form
+    default: false
+    human_description:
+      en_US: "Activate HiresFix: Generates large and consistent images. Slow."
+      zh_Hans: "HiresFix 启用：由于能够输出更大且一致的图像，生成时间会变慢。"
+      ja_JP: "HiresFix 有効化: 大きく一貫性のある画像を出力できる分、生成時間が遅くなります"
+    label:
+      en_US: HiresFix
+      zh_Hans: HiresFix
+      ja_JP: HiresFix
+    required: false
+    type: boolean
+
+  - name: hiresfix_denoise
+    form: llm
+    default: 0.6
+    human_description:
+      en_US: "Denoise coefficient for HiresFix upscaling. Default=0.6"
+      zh_Hans: "HiresFix 放大处理的降噪系数. Default=0.6"
+      ja_JP: "HiresFix 用 Denoise 係数. Default=0.6"
+    label:
+      en_US: HiresFix Denoise
+      zh_Hans: HiresFix Denoise
+      ja_JP: HiresFix Denoise
+    required: false
+    type: number
+
+  - name: hiresfix_size_ratio
+    form: llm
+    default: 0.5
+    human_description:
+      en_US: "0<(After Upscaling / Before Upscaling)<1: Bigger number generates images faster but more poorly. Default=0.5"
+      zh_Hans: "0<(缩放前 / 缩放后)<1: 数值越大，生成速度越快。Default=0.5"
+      ja_JP: "0<(アップスケーリング前 / アップスケーリング後)<1: 大きいほど速く生成されます。Default=0.5"
+    label:
+      en_US: HiresFix Size Ratio
+      zh_Hans: HiresFix Size Ratio
+      ja_JP: HiresFix Size Ratio
+    required: false
+    type: number
+
+  - name: hiresfix_upscale_method
+    form: form
+    default: bilinear
+    human_description:
+      en_US: HiresFix upscale method
+      zh_Hans: HiresFix 方法
+      ja_JP: HiresFix メソッド
+    label:
+      en_US: HiresFix Method
+      zh_Hans: HiresFix 方法
+      ja_JP: HiresFix メソッド
+    required: true
+    type: select
+    options:
+      - label:
+          en_US: nearest-exact
+        value: nearest-exact
+      - label:
+          en_US: bilinear
+        value: bilinear
+      - label:
+          en_US: area
+        value: area
+      - label:
+          en_US: bicubic
+        value: bicubic
+      - label:
+          en_US: bislerp
+        value: bislerp
