fix: Add OpenAI GPT-4o Audio Preview support (#1035)
- Add AudioPromptMessageContent import and processing
- Implement audio content conversion to input_audio format
- Add gpt-4o-audio-preview-0603 model configuration
- Update token limits from 4096 to 16384 for audio models
- Add modalities parameter handling for audio models
- Add comprehensive debug logging for audio processing
- Update manifest version to 0.0.29

Fixes #1010

--- a/models/openai/models/llm/gpt-4o-audio-preview-2025-06-03.yaml
+++ b/models/openai/models/llm/gpt-4o-audio-preview-2025-06-03.yaml
@@ -1,7 +1,7 @@
-model: gpt-4o-audio-preview
+model: gpt-4o-audio-preview-2025-06-03
 label:
-  zh_Hans: gpt-4o-audio-preview
-  en_US: gpt-4o-audio-preview
+  zh_Hans: gpt-4o-audio-preview-2025-06-03
+  en_US: gpt-4o-audio-preview-2025-06-03
 model_type: llm
 features:
   - multi-tool-call
