--- a/models/openai/models/llm/_position.yaml
+++ b/models/openai/models/llm/_position.yaml
@@ -23,6 +23,7 @@
 - gpt-4o-mini
 - gpt-4o-mini-2024-07-18
 - gpt-4o-audio-preview
+- gpt-4o-audio-preview-2025-06-03
 - gpt-4
 - gpt-4-turbo
 - gpt-4-turbo-2024-04-09
