feat: Update MiniMax provider with V2 API support and new M1 model (#1135)
* add qwen3

* feat: Update MiniMax provider with V2 API support and new M1 model

- Add chat completion V2 API with OpenAI-compatible format
- Introduce MiniMax-M1 model with enhanced features (agent-thought, tool-call, stream-tool-call)
- Update TTS models configuration and implementation
- Refactor chat completion and text embedding modules
- Improve error handling and parameter validation
- Update provider manifest and requirements

* chore: Update MiniMax plugin version to 0.0.8

* Update models/minimax/requirements.txt

Co-authored-by: crazywoola <100913391+crazywoola@users.noreply.github.com>

* feat: Enhance MiniMax tool calling support across API versions

- Add tool_call_id and function_call fields to MinimaxMessage
- Implement tool call handling for V2, Pro and original APIs
- Update message conversion methods for different API formats
- Improve tool call processing in both streaming and non-streaming modes

---------

Co-authored-by: 李海峰 <lihff@chanjet.com>
Co-authored-by: crazywoola <100913391+crazywoola@users.noreply.github.com>

--- a/models/minimax/provider/minimax.yaml
+++ b/models/minimax/provider/minimax.yaml
@@ -13,7 +13,7 @@ help:
     en_US: Get your API Key from Minimax
     zh_Hans: 从 Minimax 获取您的 API Key
   url:
-    en_US: https://api.minimax.chat/user-center/basic-information/interface-key
+    en_US: https://platform.minimaxi.com/user-center/basic-information/interface-key
 icon_large:
   en_US: icon_l_en.png
 icon_small:
@@ -49,6 +49,16 @@ provider_credential_schema:
     required: true
     type: text-input
     variable: minimax_group_id
+  - default: https://api.minimaxi.com
+    label:
+      en_US: API Base
+      zh_Hans: API Base
+    placeholder:
+      en_US: Enter your API Base
+      zh_Hans: 在此输入您的 API Base
+    required: false
+    type: text-input
+    variable: endpoint_url
 supported_model_types:
 - llm
 - text-embedding
