--- a/models/minimax/models/tts/speech-01-turbo.yaml
+++ b/models/minimax/models/tts/speech-01-turbo.yaml
@@ -5,142 +5,142 @@ model_properties:
   voices:
     - name: "青涩青年音色"
       mode: "male-qn-qingse"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "精英青年音色"
       mode: "male-qn-jingying"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "霸道青年音色"
       mode: "male-qn-badao"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "青年大学生音色"
       mode: "male-qn-daxuesheng"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "少女音色"
       mode: "female-shaonv"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "御姐音色"
       mode: "female-yujie"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "成熟女性音色"
       mode: "female-chengshu"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "甜美女性音色"
       mode: "female-tianmei"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "男性主持人"
       mode: "presenter_male"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "女性主持人"
       mode: "presenter_female"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "男性有声书1"
       mode: "audiobook_male_1"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "男性有声书2"
       mode: "audiobook_male_2"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "女性有声书1"
       mode: "audiobook_female_1"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "女性有声书2"
       mode: "audiobook_female_2"
-      language: "zh-CN"
-    - name: "青涩青年音色"
-      mode: "beta：male-qn-qingse-jingpin"
-      language: "zh-CN"
-    - name: "精英青年音色"
-      mode: "beta：male-qn-jingying-jingpin"
-      language: "zh-CN"
-    - name: "霸道青年音色"
-      mode: "beta：male-qn-badao-jingpin"
-      language: "zh-CN"
-    - name: "青年大学生音色"
-      mode: "beta：male-qn-daxuesheng-jingpin"
-      language: "zh-CN"
-    - name: "少女音色"
-      mode: "beta：female-shaonv-jingpin"
-      language: "zh-CN"
-    - name: "御姐音色"
-      mode: "beta：female-yujie-jingpin"
-      language: "zh-CN"
-    - name: "成熟女性音色"
-      mode: "beta：female-chengshu-jingpin"
-      language: "zh-CN"
-    - name: "甜美女性音色"
-      mode: "beta：female-tianmei-jingpin"
-      language: "zh-CN"
+      language: ['zh-Hans']
+    - name: "青涩青年音色(精品版)"
+      mode: "male-qn-qingse-jingpin"
+      language: ['zh-Hans']
+    - name: "精英青年音色(精品版)"
+      mode: "male-qn-jingying-jingpin"
+      language: ['zh-Hans']
+    - name: "霸道青年音色(精品版)"
+      mode: "male-qn-badao-jingpin"
+      language: ['zh-Hans']
+    - name: "青年大学生音色(精品版)"
+      mode: "male-qn-daxuesheng-jingpin"
+      language: ['zh-Hans']
+    - name: "少女音色(精品版)"
+      mode: "female-shaonv-jingpin"
+      language: ['zh-Hans']
+    - name: "御姐音色(精品版)"
+      mode: "female-yujie-jingpin"
+      language: ['zh-Hans']
+    - name: "成熟女性音色(精品版)"
+      mode: "female-chengshu-jingpin"
+      language: ['zh-Hans']
+    - name: "甜美女性音色(精品版)"
+      mode: "female-tianmei-jingpin"
+      language: ['zh-Hans']
     - name: "聪明男童"
       mode: "clever_boy"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "可爱男童"
       mode: "cute_boy"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "萌萌女童"
       mode: "lovely_girl"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "卡通猪小琪"
       mode: "cartoon_pig"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "病娇弟弟"
       mode: "bingjiao_didi"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "俊朗男友"
       mode: "junlang_nanyou"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "纯真学弟"
       mode: "chunzhen_xuedi"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "冷淡学长"
       mode: "lengdan_xiongzhang"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "霸道少爷"
       mode: "badao_shaoye"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "甜心小玲"
       mode: "tianxin_xiaoling"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "俏皮萌妹"
       mode: "qiaopi_mengmei"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "妩媚御姐"
       mode: "wumei_yujie"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "嗲嗲学妹"
       mode: "diadia_xuemei"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "淡雅学姐"
       mode: "danya_xuejie"
-      language: "zh-CN"
+      language: ['zh-Hans']
     - name: "Santa Claus"
       mode: "Santa_Claus"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Grinch"
       mode: "Grinch"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Rudolph"
       mode: "Rudolph"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Arnold"
       mode: "Arnold"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Charming Santa"
       mode: "Charming_Santa"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Charming Lady"
       mode: "Charming_Lady"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Sweet Girl"
       mode: "Sweet_Girl"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Cute Elf"
       mode: "Cute_Elf"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Attractive Girl"
       mode: "Attractive_Girl"
-      language: "zh-CN"
+      language: ['en-US']
     - name: "Serene Woman"
       mode: "Serene_Woman"
-      language: "zh-CN"
+      language: ['en-US']
   word_limit: 8000
   audio_type: 'mp3'
   max_workers: 5
