--- a/models/gemini/models/llm/_position.yaml
+++ b/models/gemini/models/llm/_position.yaml
@@ -10,6 +10,7 @@
 - gemini-2.0-flash-lite
 - gemini-2.0-flash-lite-preview-02-05
 - gemini-2.0-flash-lite-preview
+- gemini-2.0-flash-preview-image-generation
 - gemini-2.0-pro-exp
 - gemini-2.0-pro-exp-02-05
 - gemini-exp-1206
