feat: add appcode & fix base64 (#1155)
* feat: add appcode & fix base64

* fix：Dify Plugin SDK Version

* fix: plugin version

* add gemini models

---------

Co-authored-by: zhaochenxue <zhaochenxue@bixin.cn>

--- a/models/aihubmix/manifest.yaml
+++ b/models/aihubmix/manifest.yaml
@@ -1,4 +1,4 @@
-version: 0.0.3
+version: 0.0.4
 type: plugin
 author: langgenius
 name: aihubmix
@@ -8,10 +8,10 @@ label:
   zh_Hans: Aihubmix
   pt_BR: Aihubmix
 description:
-  en_US: 'One Gateway, Infinite Models'
-  ja_JP: 'One Gateway, Infinite Models'
-  zh_Hans: '一个接口，无限模型'
-  pt_BR: 'One Gateway, Infinite Models'
+  en_US: 'One Gateway, Infinite Models；one-stop request: OpenAI, Claude, Gemini, DeepSeek, Qwen, and over 500 AI models.'
+  ja_JP: '1つのAPIで無限のAIモデルを利用可能。OpenAI、Claude、Gemini、DeepSeek、Qwenなど、500種類以上のAIモデルにワンストップでアクセス。'
+  zh_Hans: '一个接口，无限模型；一站式请求：OpenAI、Claude、Gemini、DeepSeek、Qwen等 500+AI 模型'
+  pt_BR: 'Um Gateway, Modelos Infinitos; solicitação única: OpenAI, Claude, Gemini, DeepSeek, Qwen e mais de 500 modelos de IA.'
 icon: icon.svg
 resource:
   memory: 268435456
