--- a/models/aihubmix/requirements.txt
+++ b/models/aihubmix/requirements.txt
@@ -1,5 +1,5 @@
-dify_plugin>=0.2.0,<0.3.0
-httpx~=0.27.2
+dify_plugin>=0.3.0,<0.4.0
+httpx>=0.28.1,<0.29.dev0
 openai~=1.57.0
 google-genai~=1.2.0
 anthropic~=0.48.0
