--- a/models/aihubmix/models/llm/_position.yaml
+++ b/models/aihubmix/models/llm/_position.yaml
@@ -15,6 +15,8 @@
 - claude-3-5-haiku-20241022
 - claude-3-opus-20240229
 - claude-3-5-sonnet-20240620
+- gemini-2.5-pro
+- gemini-2.5-flash
 - gemini-2.5-flash-preview-04-17
 - gemini-2.5-pro-preview-05-06
 - gemini-2.5-flash-preview-04-17-nothink
