feat: add advanced LlamaParse tool with LLM mode, large file support (#1157)
Co-authored-by: yungler <yungler@dify.ai>

--- a/tools/llama_parse/provider/llama.yaml
+++ b/tools/llama_parse/provider/llama.yaml
@@ -26,6 +26,7 @@ credentials_for_provider:
     url: https://cloud.llamaindex.ai/
 tools:
   - tools/llama_parse.yaml
+  - tools/llama_parse_advanced.yaml
 extra:
   python:
     source: provider/llama.py
