feat: gitlab tool allow to ignore ssl verify (#1144)
Co-authored-by: zhang_taibin <zhang_taibin@topsec.com.cn>

--- a/tools/gitlab/provider/gitlab.yaml
+++ b/tools/gitlab/provider/gitlab.yaml
@@ -26,6 +26,16 @@ credentials_for_provider:
     required: false
     type: text-input
     url: https://gitlab.com/help
+  ssl_verify:
+    default: true
+    help:
+      en_US: Whether to verify the SSL certificate
+      zh_Hans: 是否验证 SSL 证书
+    label:
+      en_US: Whether to verify the SSL certificate
+      zh_Hans: 是否验证 SSL 证书
+    required: false
+    type: boolean
 extra:
   python:
     source: provider/gitlab.py
