feat: add models, json schema, thiking budget (#1177)
Co-authored-by: 陈力坤 <likunchen@caixin.com>

--- a/models/openrouter/models/llm/_position.yaml
+++ b/models/openrouter/models/llm/_position.yaml
@@ -1,17 +1,30 @@
+- openai/o4-mini-high
+- openai/o3-mini-high
 - openai/o3-mini
 - openai/o3-mini-2025-01-31
 - openai/o1-preview
 - openai/o1-mini
+- openai/gpt-4.1
+- openai/gpt-4.1-mini
+- openai/gpt-4.1-nano
+- openai/chatgpt-4o-latest
+- openai/gpt-4o-2024-11-20
 - openai/gpt-4o
 - openai/gpt-4o-mini
 - openai/gpt-4
 - openai/gpt-4-32k
 - openai/gpt-3.5-turbo
+- anthropic/claude-sonnet-4
+- anthropic/claude-3.7-sonnet:thinking
 - anthropic/claude-3.7-sonnet
 - anthropic/claude-3.5-sonnet
 - anthropic/claude-3-haiku
 - anthropic/claude-3-opus
 - anthropic/claude-3-sonnet
+- google/gemini-2.5-pro
+- google/gemini-2.5-flash
+- google/gemini-2.5-flash-lite-preview-06-17
+- google/gemini-2.0-flash-lite-001
 - google/gemini-pro-1.5
 - google/gemini-flash-1.5
 - google/gemini-pro
@@ -33,3 +46,5 @@
 - qwen/qwen-2-72b-instruct
 - deepseek/deepseek-chat
 - deepseek/deepseek-coder
+- x-ai/grok-3-beta
+- x-ai/grok-3-mini-beta
